<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广新COA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_notice">通知公告</string>
    <string name="home_meetting">会议通知</string>
    <string name="home_mail">内部邮件</string>
    <string name="home_schedule">待办流程</string>
    <string name="home_contact">通讯录</string>
    <string name="home_setting">设置</string>
    <string name="send">发送</string>
    
    <string name="fedback_empty_notice">反馈内容不能为空！</string>
    
    <string name="login_error">登录失败,未知错误</string>
    <string name="login_success">登录成功</string>
    
    <string name="login">登陆</string>
    <string name="login_name">用户名：</string>
    <string name="login_passwd">密码：</string>
	<string name="title">OA移动办公</string>
	<string name="remeber_passwd">记住密码</string>
	
	<string name="setting_about_us">关于我们</string>
	<string name="setting_feedback">意见反馈</string>
	<string name="setting_grade">给我们评分</string>
	<string name="exit_login">退出登录</string>
	
	<string name="feedback_notice">欢迎提出您的宝贵意见!</string>
    
</resources>
