<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/smoke_white">
    
    <include 
        layout="@layout/title"
        />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="0.2dp"
	    android:background="@color/dark_gray"
	     android:layout_marginTop="20dp"
	    />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:orientation="vertical"
        >
        <LinearLayout 
            android:id="@+id/setting_aboutus_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_btn_selector"
            android:clickable="true"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/guanyu_icon"
                android:padding="2dp"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_about_us"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />
        
        <LinearLayout 
            android:id="@+id/setting_feedback_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_btn_selector"
            android:clickable="true"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yijian_icon"
                android:padding="2dp"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_feedback"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />
        
        <LinearLayout 
            android:id="@+id/setting_grade_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/white_btn_selector"
            android:clickable="true"
            >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pingfeng_icon"
                android:padding="2dp"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_grade"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
    <View 
	    android:layout_width="match_parent"
	    android:layout_height="0.2dp"
	    android:background="@color/dark_gray"
	    />
    
    <Button 
        android:id="@+id/exit_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_login"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="20sp"
        android:background="@drawable/exit_btn_selector"
        android:textColor="@color/text_white_color"
        />
</LinearLayout>
